# stays-dashboard-api

./: .env  .env.example  README.md  Stays_Dashboard_API.postman_collection.json  WEBHOOK_SETUP.md  database.py  generate_token.py  main.py  pyproject.toml  requirements.txt  stays_client.py  store.py  validate_production.sh
app/: main.py  repasse.py
postman/: prod-onrender.postman_environment.json
